# certificate-pinning-example-c

./: .gitignore  CMakeLists.txt  main.c  urip.io.pem  urip.io.pubkey.der  urip.io.pubkey.pem
